add support for profile pic when creating user
